# ProjectModeQt6

./: CMakeLists.txt  README.md  lcwidget.cpp  lcwidget.h  main.cpp  mainwidget.cpp  mainwidget.h
config/Linux/: Deploy.Template  Pack_Debian.Template
config/Windows/: Pack.Template  VersionInfo.Template  deploy.Template
res/: res.qrc
